# magish

./: Cargo.toml  LICENSE  README.md  build.rs  build.sh  windows_installer.bat
assets/: favicon_LICENSE.txt
src/: config.rs  history.rs  main.rs
