[package]
name = "magish"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bagault/magish"

[dependencies]
which = "5.0"
dirs = "5.0"
rustyline = "12.0"  # For command history and line editing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For config file
glob = "0.3"       # For path completion

[build-dependencies]
winres = "0.1"
